# dagger-grpc

./: .bazelrc  BUILD.bazel  WORKSPACE  dependencies.bzl  versions.bzl
api/src/main/kotlin/com/geekinasuit/daggergrpc/api/: GrpcApplicationComponent.kt
io_grpc/compiler/: BUILD.bazel
io_grpc/compiler/src/main/kotlin/com/geekinasuit/daggergrpc/wire/compile/: AdapterClassGenerator.kt  ClassInfo.kt  GrpcCallScopeGraphGenerator.kt  GrpcServerDaggerProcessor.kt  GrpcServerDaggerProcessorProvider.kt
io_grpc/example/service/armeria/: BUILD.bazel
io_grpc/example/service/armeria/src/main/kotlin/com/geekinasuit/daggergrpc/iogrpc/example/armeria/dagger/: ApplicationGraph.kt  ApplicationGraphModule.kt  GrpcCallScopeGraph.kt
