load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
load("@io_bazel_rules_kotlin//kotlin:core.bzl", "kt_ksp_plugin")

package(default_visibility = ["//visibility:public"])

kt_jvm_library(
    name = "compiler",
    srcs = glob(["src/main/kotlin/**/*.kt"]),
    resources = glob(["src/main/resources/**/*"]),
    deps = [
        "//api",
        "@maven//:com_google_devtools_ksp_symbol_processing_api",
        "@maven//:com_squareup_kotlinpoet",
        "@maven//:com_squareup_kotlinpoet_ksp",
        "@maven//:io_grpc_grpc_api",
        "@maven//:io_grpc_grpc_stub",
    ],
)

kt_ksp_plugin(
    name = "plugin",
    processor_class = "com.geekinasuit.daggergrpc.wire.compile.GrpcServerDaggerProcessorProvider",
    deps = [
        ":compiler",
    ],
)
